Refactored Integer to BigInteger with OPE material, modified HeapFile to include OPE encryption